public/css/styles.css
body,
html {
    margin: 0;
    padding: 0;
    height: 100vh;
    width: 100vw;
    font-family: 'Arial, sans-serif';
    color: #0ff;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000;
}

.container {
    position: relative;
    width: 80vw;
    height: 40vw;
    /* Adjusted to maintain a 16:9 aspect ratio */
    cursor: url('../assets/images/mouse_cursor.png') 15 5, auto !important;
}

button {
    cursor: url('../assets/images/mouse_cursor.png') 15 5, auto !important;
}

.game-screen,
.battle-scene {
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border: 0.2vw solid #00f3ff;
    border-radius: 2vw;
}

.game-screen {
    background: url('../assets/images/background.png') no-repeat center center fixed;
    background-size: 100vw;
}

.title {
    font-family: 'Orbitron', sans-serif;
    font-size: 5vw;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-shadow:
        0 0 5px #00f3ff,
        0 0 10px #00f3ff,
        0 0 20px #00f3ff,
        0 0 30px #00f3ff,
        0 0 40px #00f3ff;
    color: #06427e;
    position: relative;
}

.play-button,
.collections-button {
    font-family: 'Orbitron', sans-serif;
    margin-top: 2vw;
    padding: 1vw 4vw;
    font-size: 1.5vw;
    border: 0.2vw solid #00f3ff;
    background: rgba(30, 144, 255, 0.2);
    color: #00f3ff;
    border-radius: 1vw;
    box-shadow:
        0 0 5px #076bf8,
        0 0 10px #076bf8,
        0 0 15px #076bf8,
        0 0 20px #076bf8,
        0 0 25px #076bf8;
    text-shadow:
        0 0 5px #076bf8,
        0 0 10px #076bf8,
        0 0 20px #076bf8;
    width: 19vw;
    text-align: center;
}

.play-button {
    margin-top: 9vw;
}

.play-button:hover,
.collections-button:hover {
    background: rgba(53, 129, 235, 0.8);
    color: #00e6e6;
    border: 0.2vw solid #00e6e6;
    box-shadow:
        0 0 8px #076bf8,
        0 0 15px #076bf8,
        0 0 22px #076bf8,
        0 0 29px #076bf8,
        0 0 36px #076bf8;
    text-shadow:
        0 0 8px #00e6e6,
        0 0 15px #00e6e6,
        0 0 22px #00e6e6;
}

.settings-button {
    position: absolute;
    top: 20px;
    right: 20px;
    padding: 0.1vw;
    background: transparent;
    border: none;
    color: #00f3ff;
    font-size: 1.5vw;
    cursor: pointer;
}

.settings-button:hover {
    background: rgba(53, 129, 235, 0.8);
    color: #00e6e6;
}


.chapter-level {
    position: absolute;
    top: 20%;
    left: 2vw;
    font-family: 'Orbitron', sans-serif;
    color: #00f3ff;
    text-shadow:
        0 0 5px #076bf8,
        0 0 10px #076bf8,
        0 0 20px #076bf8;
    font-size: 1.2vw;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.level-star {
    background: url('../assets/images/yellow_star.png') no-repeat center center;
    background-size: contain;
    padding: 1vw;
    border-radius: 0.5vw;
    width: 6vw;
    height: 6vw;
    transform: rotate(62deg);
    display: flex;
    align-items: center;
    justify-content: center;
}

.level-number {
    font-size: 1.5vw;
    transform: rotate(-62deg);
    margin-top: 0.1vw;
    margin-right: 0.6vw;
}

.robot-image {
    position: absolute;
    top: 40%;
    left: 2vw;
    width: 25%;
    height: 50%;
}

#battle-canvas {
    width: 100%;
    height: 100%;
    border: 0.2vw solid #00f3ff;
    border-radius: 2vw;
}

